consul/vault-consul-statefulset.yaml
# kubectl -n vault-ns exec -it consul-0 -- /bin/sh
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: consul
  namespace: vault-ns
  labels:
    app: consul
    role: server
    layer: database
spec:
  selector:
    matchLabels:
      app: consul
      role: server
  serviceName: consul
  podManagementPolicy: "Parallel"
  replicas: 4
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: consul
        role: server
    spec:
      serviceAccountName: consul
      securityContext:
        fsGroup: 1000
      containers:
      - name: consul
        image: l_consul:latest
        imagePullPolicy: Never

        args:

          - "agent"
          - "-advertise=$(POD_IP)"
          - "-bootstrap-expect=3"
          - "-config-file=/etc/consul/config/config.json"
          - "-encrypt=$(GOSSIP_ENCRYPTION_KEY)"

        livenessProbe:

          exec:
            command:
            - /bin/sh
            - -c
            - ps aux | grep consul
          initialDelaySeconds: 5
          timeoutSeconds: 2

        readinessProbe:

          httpGet:
            path: /v1/status/peers
            port: 8500
          initialDelaySeconds: 30
          timeoutSeconds: 5

        ports:

        - containerPort: 8500
          name: ui-http
        - containerPort: 8501
          name: ui-https
        - containerPort: 8600
          name: dns-udp
          protocol: UDP
        - containerPort: 8600
          name: dns-tcp
          protocol: TCP

        volumeMounts:

        - name: consul-config
          mountPath: /etc/consul/config

        - name: consul-data
          mountPath: /consul/data

        - name: consul-pem
          mountPath: /etc/tls/consul.pem
          subPath: consul.pem

        - name: consul-privkey
          mountPath: /etc/tls/consul-key.pem
          subPath: consul-key.pem

        - name: consul-ca
          mountPath: /etc/tls/ca.pem
          subPath: ca.pem

      volumes:

      - name: consul-config
        configMap:
          name: consul-config

      - name: consul-pem
        secret:
          secretName: consul

      - name: consul-privkey
        secret:
          secretName: consul

      - name: consul-ca
        secret:
          secretName: consul

  volumeClaimTemplates:

  - metadata:
      name: consul-data
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: longhorn-retain
      resources:
        requests:
          storage: 100Mi
